--- a/src/app.scss
+++ b/src/app.scss
@@ -70,13 +70,29 @@ margin-left: 40px;
 margin-bottom: 20px;
 }
 .doc__article {
-    width: 100%;
-    padding: 20px;
+width: 100%;
+@media (min-width: 600px) {
+width: 200px;
+background-color:blue;
 }
-@include media-breakpoint-up(md) {
-    .doc__article  {
-      width: 75%;
-  }
+}
+.doc__introdution {
+width: 81%;
+@media (min-width: 640px) {
+width: 24.5%;
+}
+}
+.doc__docs {
+width: 30%;
+@media (min-width: 640px) {
+width: 10.5%;
+}
+}
+.doc__installation {
+width: 62%;
+@media (min-width: 640px) {
+width: 21.5%;
+}
 }
 
 // Home
@@ -107,7 +123,7 @@ margin-bottom: 20px;
 }
 .github {
     position: fixed;
-    right: 20px;
+    right: 10px;
     bottom: 10px;
 }
 
